test_log.txt
warning: praborrow-prover@1.2.0: Z3 library not found via pkg-config: Could not run `PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags z3`
warning: praborrow-prover@1.2.0: Ensure Z3 is installed and PKG_CONFIG_PATH is set if you intend to use the z3-backend.
warning: praborrow-prover@1.2.0: Z3 library not found via pkg-config: Could not run `PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags z3`
warning: praborrow-prover@1.2.0: Ensure Z3 is installed and PKG_CONFIG_PATH is set if you intend to use the z3-backend.
   Compiling praborrow-lease v1.2.0 (D:\Project\PraBorrow\crates\praborrow-lease)
warning: unused import: `SovereignState`
 --> crates\praborrow-core\src\debug_test.rs:3:28
  |
3 | ...n, SovereignState};
  |       ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `praborrow-core` (lib test) generated 1 warning (run `cargo fix --lib -p praborrow-core --tests` to apply 1 suggestion)
error[E0061]: this method takes 4 arguments but 2 arguments were supplied
    --> crates\praborrow-lease\tests\raft_test.rs:49:24
     |
  49 |     let granted = node.handle_request_vote(1, 2).await;
     |                        ^^^^^^^^^^^^^^^^^^^------ two arguments of type `u64` and `u64` are missing
     |
note: method defined here
    --> D:\Project\PraBorrow\crates\praborrow-lease\src\raft.rs:1457:18
     |
1457 |     pub async fn handle_request_vote(
     |                  ^^^^^^^^^^^^^^^^^^^
help: provide the arguments
     |
  49 |     let granted = node.handle_request_vote(1, 2, /* u64 */, /* u64 */).await;
     |                                                ++++++++++++++++++++++

error[E0061]: this method takes 4 arguments but 2 arguments were supplied
    --> crates\praborrow-lease\tests\raft_test.rs:56:30
     |
  56 |     let granted_again = node.handle_request_vote(1, 3).await;
     |                              ^^^^^^^^^^^^^^^^^^^------ two arguments of type `u64` and `u64` are missing
     |
note: method defined here
    --> D:\Project\PraBorrow\crates\praborrow-lease\src\raft.rs:1457:18
     |
1457 |     pub async fn handle_request_vote(
     |                  ^^^^^^^^^^^^^^^^^^^
help: provide the arguments
     |
  56 |     let granted_again = node.handle_request_vote(1, 3, /* u64 */, /* u64 */).await;
     |                                                      ++++++++++++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `praborrow-lease` (test "raft_test") due to 2 previous errors
